chore: Add CHANGELOG.md and update pre-commit hooks for automated changelog generation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ ignore_missing_version = false
 ignore_missing_files = false
 tag = true
 tag_name = "{new_version}"
-tag_message = "Bump version: {current_version} → {new_version}"
+tag_message = "Version updated from {current_version} to {new_version}"
 sign_tags = false
 allow_dirty = false
 commit = true
@@ -90,7 +90,10 @@ message = "bump: up2date {current_version} → {new_version}"
 moveable_tags = []
 commit_args = ""
 setup_hooks = []
-pre_commit_hooks = []
+pre_commit_hooks = [
+    "uv tool run git-cliff -r . -l --tag $BVHOOK_NEW_VERSION --prepend CHANGELOG.md",
+    "git add CHANGELOG.md",
+]
 post_commit_hooks = []
 
 [tool.bumpversion.parts.release]
