fix: Comment out include directives in CI configuration files

--- a/ext/.gitlab-ci_go.yml
+++ b/ext/.gitlab-ci_go.yml
@@ -1,8 +1,8 @@
 ---
 
-include:
-  - local: "/ext/.gitlab-ci_.yml"
-  - local: "/ext/.build_docker_image.yml"
+# include:
+#   - local: "/ext/.gitlab-ci_.yml"
+#   - local: "/ext/.build_docker_image.yml"
 
 stages:
   - validate
