chore: Update README.md for correct GitLab CI include path and enhance pre-commit task definitions

--- a/taskfiles/pre-commit.yml
+++ b/taskfiles/pre-commit.yml
@@ -2,8 +2,18 @@
 version: "3"
 
 tasks:
+  install-bin:
+    desc: Install pre-commit binary
+    cmds:
+      - set -x && uv tool install pre-commit
+
   install:
     desc: Install pre-commit hooks
     cmds:
       - set -x && {{.SET_VENV}} pre-commit install
       - set -x && {{.SET_VENV}} pre-commit install --hook-type commit-msg
+
+  run:
+    desc: Run pre-commit hooks
+    cmds:
+      - set -x && {{.SET_VENV}} pre-commit run
