--- a/ext/.build_docker_image.yml
+++ b/ext/.build_docker_image.yml
@@ -18,8 +18,6 @@ variables:
   # By default, the Docker images we create run on the linux/amd64 platform
   # PLATFORMS: linux/amd64,linux/arm64
   DEFAULT_PLATFORMS: linux/amd64
-  # When TLS is enabled, the Docker daemon will be started with --host=tcp://0.0.0.0:2376
-  DOCKER_HOST: tcp://docker:2376
   BUILD_IMAGE_SHA: $CI_REGISTRY/$CI_REGISTRY_PATH/$BUILD_IMAGE_NAME:$CI_COMMIT_SHORT_SHA
   RELEASE_IMAGE: $CI_REGISTRY/$CI_REGISTRY_PATH/$BUILD_IMAGE_NAME:$BUILD_IMAGE_TAG
   BRANCH_IMAGE: $CI_REGISTRY/$CI_REGISTRY_PATH/$BUILD_IMAGE_NAME:$CI_COMMIT_REF_NAME
@@ -34,6 +32,12 @@ variables:
       - log/
 
 .dind_services:
+  variables:
+    # When TLS is enabled, the Docker daemon will be started with --host=tcp://0.0.0.0:2376
+    DOCKER_TLS_VERIFY: "1"
+    DOCKER_TLS_CERTDIR: "/certs"
+    DOCKER_CERT_PATH: "/certs/client"
+    DOCKER_HOST: tcp://docker:2376
   services:
     - name: docker:$DIND_IMAGE_TAG
       alias: docker
@@ -42,13 +46,14 @@ variables:
       entrypoint: ["/bin/sh", "-c"]
       command:
         - |
-          # If TLS verification is disabled, add CI_REGISTRY to insecure registries.
+          # If registry TLS verification is disabled, add CI_REGISTRY to insecure registries.
           if [ "$CI_REGISTRY_TLS_VERIFY" = "0" ]; then
             mkdir -p /etc/docker/;
             echo "{ \"insecure-registries\":[\"$CI_REGISTRY\"] }" > /etc/docker/daemon.json;
+          else
+            mkdir -p /etc/docker/certs.d/$CI_REGISTRY/
+            echo "$CI_SERVER_TLS_CA_FILE" > /etc/docker/certs.d/$CI_REGISTRY/rca.crt || exit
           fi
-          mkdir -p /etc/docker/certs.d/$CI_REGISTRY/
-          echo "$CI_SERVER_TLS_CA_FILE" > /etc/docker/certs.d/$CI_REGISTRY/rca.crt || exit
           dockerd-entrypoint.sh || exit
 
 
