--- a/ext/.gitlab-ci_py.yml
+++ b/ext/.gitlab-ci_py.yml
@@ -35,8 +35,7 @@ stages:
     - >-
       if [ -f "pyproject.toml" ]; then
         mkdir $HOME/app && cp -r . $HOME/app && cd $HOME/app;
-        # if the .python-version file exists, remove it to avoid conflicts and use system python version
-        if [ -f ".python-version" ]; then rm .python-version || true; fi;
+        # Use UV_NO_MANAGED_PYTHON=1 to avoid using the managed python version and use system python version
         uv sync --group dev
       fi;
 
@@ -44,8 +43,7 @@ stages:
     - >-
       if [ -f "pyproject.toml" ]; then
         mkdir $HOME/app && cp -r . $HOME/app && cd $HOME/app;
-        # if the .python-version file exists, remove it to avoid conflicts and use system python version
-        if [ -f ".python-version" ]; then rm .python-version || true; fi;
+        # Use UV_NO_MANAGED_PYTHON=1 to avoid using the managed python version and use system python version
         uv sync --group test
       fi;
 
@@ -53,8 +51,7 @@ stages:
     - >-
       if [ -f "pyproject.toml" ]; then
         mkdir $HOME/app && cp -r . $HOME/app && cd $HOME/app;
-        # if the .python-version file exists, remove it to avoid conflicts and use system python version
-        if [ -f ".python-version" ]; then rm .python-version || true; fi;
+        # Use UV_NO_MANAGED_PYTHON=1 to avoid using the managed python version and use system python version
         uv sync --group dev --group test
       fi;
 
@@ -65,6 +62,8 @@ stages:
     - docker-exec
   variables:
     GIT_STRATEGY: clone
+    UV_NO_MANAGED_PYTHON: 1
+    UV_PYTHON_DOWNLOADS: never
   environment:
     action: prepare
     name: testing
@@ -84,6 +83,8 @@ stages:
     - docker-exec
   variables:
     GIT_STRATEGY: clone
+    UV_NO_MANAGED_PYTHON: 1
+    UV_PYTHON_DOWNLOADS: never
   environment:
     action: prepare
     name: testing
